fixes for menu on mobile screen

--- a/styles/header/_header.scss
+++ b/styles/header/_header.scss
@@ -45,7 +45,7 @@ header{
             display: block;
             line-height: 30px;
             text-align: center;
-            position: fixed;
+            position: sticky;
             margin: 0;
             top: 1.8rem;
             right: 0;
@@ -246,8 +246,12 @@ header{
     
         .header__bar{
             flex-flow: column wrap;
-            margin: 1rem 0 5rem 0;
+            margin: 2rem 0 5rem 0;
             width: 100vw;
+
+            .--menu-icon{
+                margin: -2rem 0 0 0;
+            }
 
             .header__bar--aurora-logo{
                 display: none;
@@ -286,7 +290,7 @@ header{
             font-size: 16px;
             height: 65vh;
             justify-content: space-around;
-            width: 100vw;            
+            width: 100vw;  
         }
     }
 }
