--- a/styles/main.css
+++ b/styles/main.css
@@ -143,7 +143,8 @@ header {
       display: block;
       line-height: 30px;
       text-align: center;
-      position: fixed;
+      position: -webkit-sticky;
+      position: sticky;
       margin: 0;
       top: 1.8rem;
       right: 0;
@@ -332,8 +333,10 @@ header {
       -webkit-box-direction: normal;
           -ms-flex-flow: column wrap;
               flex-flow: column wrap;
-      margin: 1rem 0 5rem 0;
+      margin: 2rem 0 5rem 0;
       width: 100vw; }
+      header .header__bar .--menu-icon {
+        margin: -2rem 0 0 0; }
       header .header__bar .header__bar--aurora-logo {
         display: none; }
       header .header__bar .header__bar__form {
